-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.6
-
-
8
-
9437a8a61 (dev), 3ac626158 (6.8), bfbc685fc (dev), 712b9620a (6.8)
-
Foundation Sprint 119
QSerialPortInfo provides USB string descriptors on Linux, while it only provides information about the VID/PID on Windows. I don't see any explanation for this on the docs. Is there any way to get the USB string descriptors on Windows?
For Gerrit Dashboard: QTBUG-128487 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
598419,30 | Windows use iManufacturer/iProduct for manufacturer/description | dev | qt/qtserialport | Status: MERGED | +2 | 0 |
601856,2 | Windows: use USB info to get manufacturer and description of a device | dev | qt/qtserialport | Status: ABANDONED | 0 | 0 |
602270,2 | Windows use iManufacturer/iProduct for manufacturer/description | 6.8 | qt/qtserialport | Status: MERGED | +2 | 0 |
602337,3 | Remove superfluous length checking of string descriptor | dev | qt/qtserialport | Status: MERGED | +2 | 0 |
602461,2 | Remove superfluous length checking of string descriptor | 6.8 | qt/qtserialport | Status: MERGED | +2 | 0 |