src/serialport/qserialportinfo_win.cpp
@@ -10,6 +10,7 @@
 #include <QtCore/quuid.h>
 #include <QtCore/qpair.h>
 #include <QtCore/qstringlist.h>
+#include <QtCore/private/qwinregistry_p.h>
 
 #include <vector>
 
@@ -18,6 +19,9 @@
 #include <winioctl.h> // for GUID_DEVINTERFACE_COMPORT
 #include <setupapi.h>
 #include <cfgmgr32.h>
+#include <usbioctl.h>
+#include <usbiodef.h>
+#include <ioapiset.h>
 
 #ifdef QT_NO_REDEFINE_GUID_DEVINTERFACE_MODEM
 #  include <ntddmodm.h> // for GUID_DEVINTERFACE_MODEM
@@ -81,6 +85,236 @@ static QString deviceRegistryProperty(HDEVINFO deviceInfoSet,
         outputBuffer.resize(bytesRequired / sizeof(wchar_t) + 2, 0);
     }
     return QString::fromWCharArray(&outputBuffer[0]);
+}
+
+static QString getStringDescriptor(HANDLE hHubDevice, ULONG connectionIndex,
+                                   UCHAR descriptorIndex, USHORT languageID)
+{
+
+    constexpr DWORD bufferSize = sizeof(USB_DESCRIPTOR_REQUEST) + MAXIMUM_USB_STRING_LENGTH;
+    std::array<UCHAR, bufferSize> buffer{};
+    auto request = reinterpret_cast<PUSB_DESCRIPTOR_REQUEST>(buffer.data());
+
+    request->ConnectionIndex = connectionIndex;
+    request->SetupPacket.wValue = (USB_STRING_DESCRIPTOR_TYPE << 8) | descriptorIndex;
+    request->SetupPacket.wIndex = languageID;
+    request->SetupPacket.wLength = MAXIMUM_USB_STRING_LENGTH;
+
+    ULONG   bytesReturned = 0;
+    BOOL success = DeviceIoControl(hHubDevice, IOCTL_USB_GET_DESCRIPTOR_FROM_NODE_CONNECTION,
+                                   request, bufferSize, request, bufferSize, &bytesReturned,
+                                   nullptr);
+
+    if (!success)
+        return {};
+
+    constexpr ULONG minExpectedSize = sizeof(USB_DESCRIPTOR_REQUEST) +
+            sizeof(USB_STRING_DESCRIPTOR);
+
+    if (bytesReturned < minExpectedSize)
+        return {};
+
+    const auto stringDesc = reinterpret_cast<PUSB_STRING_DESCRIPTOR>(request->Data);
+
+    if (stringDesc->bDescriptorType != USB_STRING_DESCRIPTOR_TYPE)
+        return {};
+
+    if (stringDesc->bLength != bytesReturned - sizeof(USB_DESCRIPTOR_REQUEST))
+        return {};
+
+    if (stringDesc->bLength % 2 != 0)
+        return {};
+
+    if ((languageID == 0) && ((stringDesc->bLength - sizeof(USHORT) / sizeof(USHORT))) == 0)
+        return {};
+
+    // Offset per USB 2.0 standard, section 9.6.7 table 9-16.
+    // bLength appears to include the size of the first 2 bytes of the descriptor
+    constexpr int stringOffset = 2;
+    const int numWideChars = (stringDesc->bLength - stringOffset) / sizeof(wchar_t);
+    return QString::fromWCharArray(stringDesc->bString, numWideChars);
+}
+
+static std::vector<wchar_t> getDevicePath(DEVINST devInst)
+{
+    unsigned long devIdSize;
+
+    if (::CM_Get_Device_ID_Size(&devIdSize, devInst, 0) != CR_SUCCESS) {
+        return {};
+    }
+
+    std::vector<wchar_t> buffer(devIdSize + 1);
+
+    if (::CM_Get_Device_ID(devInst, buffer.data(), devIdSize, 0) != CR_SUCCESS) {
+        return {};
+    }
+
+    return buffer;
+}
+
+// Returns true if a hub is found, false if we gave up and didn't find one
+// Passes devLocation by ref - port number on the hub of the device we need info for.
+// Passes buffer by ref - path to the device we need to query to get information
+static bool getUSBLocationAndPath(DWORD devInst, int &devLocation, std::vector<wchar_t> &buffer)
+{
+    bool hubFound = false;
+    int count = 0;
+    QString devLocationStr;
+    std::vector<wchar_t> devicePath = {};
+
+
+    // In order to find the actual information we want to find in subsequent function calls,
+    // We have to get the port number on the hub of the device we want from that device,
+    // and we have to get the path to the hub device. Both are required to get
+    // any of the usb data we want. So we loop through starting with the passed-in
+    // device instance, and we return (via out arguments) the port of the device connected
+    // to the hub, and the path to the hub itself.
+
+    while (!hubFound && (count < 3)) {
+        DEVINST parentDevInst;
+        if (count == 0) {
+            parentDevInst = devInst;
+        } else {
+            if (::CM_Get_Parent(&parentDevInst, devInst, 0) != CR_SUCCESS) {
+                return false;
+            }
+        }
+
+        devicePath = getDevicePath(parentDevInst);
+
+        if (devicePath.empty())
+            return false;
+
+        // Get info for this device. If it's a composite device we'll have to go up another level.
+
+        HDEVINFO currDeviceInformation =
+                ::SetupDiGetClassDevsW(nullptr, devicePath.data(), NULL,
+                                       DIGCF_ALLCLASSES|DIGCF_PRESENT|DIGCF_DEVICEINTERFACE);
+
+        if (currDeviceInformation == INVALID_HANDLE_VALUE)
+            return false;
+
+        SP_DEVINFO_DATA currDeviceInfoData = {};
+        currDeviceInfoData.cbSize = sizeof(currDeviceInfoData);
+
+        // There should only be one since we're getting info for the parent device
+        if (!::SetupDiEnumDeviceInfo(currDeviceInformation, 0, &currDeviceInfoData)) {
+            ::SetupDiDestroyDeviceInfoList(currDeviceInformation);
+            return false;
+        }
+
+        // Find out if this device is a hub device, if so, we're done
+        const QString devDescription = deviceRegistryProperty(currDeviceInformation,
+                                                              &currDeviceInfoData,
+                                                              SPDRP_DEVICEDESC);
+
+        if (devDescription.contains(L"Hub")) {
+            hubFound = true;
+        }  else {
+            devInst = parentDevInst;
+            devLocationStr = deviceRegistryProperty(currDeviceInformation, &currDeviceInfoData,
+                                                    SPDRP_LOCATION_INFORMATION);
+            count++;
+        }
+
+        ::SetupDiDestroyDeviceInfoList(currDeviceInformation);
+    }
+
+    if (count == 3)
+        // didn't find what we were looking for. Give up.
+        return false;
+
+    if (!hubFound)
+        return false;
+
+    const QString portString(L"Port_#");
+
+    if (devLocationStr.contains(portString)) {
+        devLocationStr.remove(portString);
+        devLocation = devLocationStr.left(devLocationStr.indexOf(u'.')).toInt();
+    } else {
+        return false;
+    }
+
+    // Build the path based on information found here:
+    // https://stackoverflow.com/questions/
+    // 8007468/how-do-i-obtain-usb-device-descriptor-given-a-device-path/32641140#32641140
+    QString devPath = QString::fromStdWString(devicePath.data());
+    QString hubUuidStr = u'#' + QUuid(GUID_DEVINTERFACE_USB_HUB).toString();
+
+    devPath.replace(u'\\', u'#');
+    devPath.prepend(L"\\\\?\\");
+    devPath.append(hubUuidStr); // GUID for hub devices
+    buffer.resize(devPath.size()+1, 0);
+    devPath.toWCharArray(buffer.data());
+
+    return true;
+}
+
+struct UsbData
+{
+    QString iManufacturer;
+    QString iProduct;
+};
+
+static UsbData getUSBDataFromDevice(DWORD devInst)
+{
+    std::vector<wchar_t> buffer;
+    int devLocation;
+
+    if (!getUSBLocationAndPath(devInst, devLocation, buffer))
+        return {};
+
+    // Open the Hub device. To get the information we want, we have to open the Hub device,
+    // and pass in the port number in the argument structure.
+
+    HANDLE fileHandle = ::CreateFile(buffer.data(), GENERIC_READ, FILE_SHARE_READ, NULL,
+                                     OPEN_EXISTING, FILE_ATTRIBUTE_NORMAL, NULL);
+
+
+    if (fileHandle == INVALID_HANDLE_VALUE)
+        return {};
+
+    auto closeHandleGuard = qScopeGuard([&fileHandle] { ::CloseHandle(fileHandle); });
+
+    // Some of the following code was from Microsoft's sample usbview code
+    constexpr ULONG size = sizeof(USB_NODE_CONNECTION_INFORMATION);
+    std::array<UCHAR, size> connectionInfoData;
+
+    // Set the port number of the device on the hub for the DeviceIoControl call.
+    auto connectionInfo =
+            reinterpret_cast<PUSB_NODE_CONNECTION_INFORMATION>(connectionInfoData.data());
+    connectionInfo->ConnectionIndex = devLocation;
+
+    ULONG dataSize = 0;
+    if (!::DeviceIoControl(fileHandle, IOCTL_USB_GET_NODE_CONNECTION_INFORMATION,
+                          connectionInfo, size, connectionInfo, size, &dataSize, nullptr)) {
+        return {};
+    }
+
+    // Get the language information, but we're only going to use the first one since we're going to
+    // use this information for the manufacturer returned to Qt's caller, and there's only 1 allowed
+    // there
+
+    QString usbStringData = getStringDescriptor(fileHandle, connectionInfo->ConnectionIndex, 0, 0);
+
+    if (usbStringData.isEmpty())
+        return {};
+
+    USHORT languageIDs = usbStringData[0].unicode();
+    UsbData usbData;
+
+    if (connectionInfo->DeviceDescriptor.iManufacturer != 0)
+        usbData.iManufacturer = getStringDescriptor(fileHandle, connectionInfo->ConnectionIndex,
+                                                    connectionInfo->DeviceDescriptor.iManufacturer,
+                                                    languageIDs);
+
+    if (connectionInfo->DeviceDescriptor.iProduct != 0)
+        usbData.iProduct = getStringDescriptor(fileHandle, connectionInfo->ConnectionIndex,
+                                               connectionInfo->DeviceDescriptor.iProduct,
+                                               languageIDs);
+
+    return usbData;
 }
 
 static QString deviceInstanceIdentifier(DEVINST deviceInstanceNumber)
@@ -292,6 +526,19 @@ QList<QSerialPortInfo> QSerialPortInfo::availablePorts()
                     deviceVendorIdentifier(instanceIdentifier, priv.hasVendorIdentifier);
             priv.productIdentifier =
                     deviceProductIdentifier(instanceIdentifier, priv.hasProductIdentifier);
+
+            // This makes Windows return the same data that linux does for Manufacturer and Product
+            if (instanceIdentifier.startsWith(L"USB\\") && priv.hasVendorIdentifier &&
+                priv.hasProductIdentifier) {
+                UsbData usbStrings = getUSBDataFromDevice(deviceInfoData.DevInst);
+
+                if (!usbStrings.iManufacturer.isEmpty())
+                    priv.manufacturer = usbStrings.iManufacturer;
+
+                if (!usbStrings.iProduct.isEmpty())
+                    priv.description = usbStrings.iProduct;
+                // End of making Windows return the same data as Linux
+            }
 
             serialPortInfoList.append(priv);
         }
